# helio-sequencer

./: CMakeLists.txt
Source/: CMakeLists.txt  Common.h  generateCmakeIncludeDirectories.py
Source/UI/: MainLayout.cpp
